@@ -1,5 +1,10 @@
 2006-12-19  Chris Lumens  <clumens@redhat.com>
 
+	* pykickstart/base.py (KickstartCommand.__call__):  Add a function to
+	set all the attributes of a command object at once.
+	(BaseHandler._registerHandler):  Don't need to do so much goofy stuff
+	to register a command handler anymore.
+
 	* pykickstart/version.py (returnClassForVersion):  Add a function to
 	return the class matching a given kickstart syntax version.  This does
 	not return an instance of that class.
